Add Commands & 起動時にURLを追加してしまうように修正

--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,14 @@
     ],
     "action": {
       "default_popup": "popup.html"
+    },
+    "commands": {
+        "_execute_action": {
+            "suggested_key": {
+                "default": "Ctrl+Shift+S",
+                "mac": "MacCtrl+Shift+S"
+            },
+            "description": "Quickly VolaStock!"
+        }
     }
 }
